compiler-core/src/type_/snapshots/rakun_core__type___tests__type_unification_does_not_allow_different_variants_to_be_treated_as_safe.snap
---
source: compiler-core/src/type_/tests.rs
assertion_line: 2095
expression: "\npub record Wibble {\n  Wibble(a: Int, b: Int)\n  Wobble(a: Int, c: String)\n}\n\npub fn main() {\n  let a = case todo {\n    Wibble(..) as b -> Wibble(..b, b: 1)\n    Wobble(..) as b -> Wobble(..b, c: \"a\")\n  }\n\n  a.b\n}\n"
---
----- SOURCE CODE

pub record Wibble {
  Wibble(a: Int, b: Int)
  Wobble(a: Int, c: String)
}

pub fn main() {
  let a = case todo {
    Wibble(..) as b -> Wibble(..b, b: 1)
    Wobble(..) as b -> Wobble(..b, c: "a")
  }

  a.b
}


----- ERROR
error: Unknown record field
   ┌─ /src/one/two.rakun:13:4
   │
13 │   a.b
   │    ^^ Did you mean `a`?

The value being accessed has this type:

    Wibble

It has these accessible fields:

    .a

Note: The field you are trying to access might not be consistently present
or positioned across the custom type's variants, preventing reliable
access. Ensure the field exists in the same position and has the same
type in all variants, or pattern matching on it to enable direct accessor
syntax.
